# gn-api-sdk-python

./: pyproject.toml  requirements-dev.txt  requirements.txt
test/: test_gerencianet.py
