[tool.poetry]
name = "gerencianet"
version = "1.1.0"
description = "Module for integration with Gerencianet API"
authors = ["Danniel Hugo <suportetecnico@gerencianet.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.24.0"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
responses = "^0.12.0"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
